# PROE

./: .gitignore  CMakeLists.txt  Edytor.cpp  Edytor.h  Figura.cpp  Figura.h  Kolo.cpp  Kolo.h  Obiekt.cpp  Obiekt.h  Prostokat.cpp  Prostokat.h  Tablica.cpp  Tablica.h  Wyjatek.cpp  Wyjatek.h  main.cpp
